@startuml Hotel Reservation System - Class Diagram

!theme plain
skinparam classAttributeIconSize 0

package "com.hotel.model" {
    class Reservation {
        -Long id
        -String confirmationNumber
        -LocalDate checkIn
        -LocalDate checkOut
        -int numAdults
        -int numChildren
        -ReservationStatus status
        +Guest guest
        +List<ReservationRoom> reservationRooms
        +List<ReservationAddon> reservationAddons
        +Billing billing
    }
    
    class Guest {
        -Long id
        -String name
        -String phone
        -String email
        -String address
        -int loyaltyPoints
        -String loyaltyNumber
        +List<Reservation> reservations
    }
    
    class Room {
        -Long id
        -int roomNumber
        -RoomType type
        -double basePrice
        -RoomStatus status
    }
    
    class Billing {
        -Long id
        -double subtotal
        -double taxAmount
        -double totalAmount
        -double paidAmount
        -double balanceAmount
        -String paymentStatus
        +Reservation reservation
        +List<Payment> payments
    }
    
    class Payment {
        -Long id
        -PaymentMethod method
        -double amount
        -LocalDateTime createdAt
        +Billing billing
    }
    
    enum RoomType {
        SINGLE
        DOUBLE
        DELUXE
        PENTHOUSE
    }
    
    enum ReservationStatus {
        PENDING
        CONFIRMED
        CHECKED_IN
        CHECKED_OUT
        CANCELLED
    }
}

package "com.hotel.service" {
    class ReservationService {
        +createReservation(...) : Reservation
        +suggestRooms(...) : List<RoomSuggestion>
        +validateOccupancy(...) : boolean
    }
    
    class RoomSuggestion {
        -Room room
        -int quantity
        -RoomType secondaryRoomType
        -int secondaryQuantity
        +isCombination() : boolean
        +getDescription() : String
    }
    
    class BillingService {
        +createBilling(...) : Billing
        +processPayment(...) : Payment
        +createDeposit(...) : Payment
        +processPartialPayment(...) : Payment
    }
    
    class ReportingService {
        +getActivityLogs(...) : List<AuditLog>
        +getActivityLogsFromDatabase(...) : List<AuditLog>
        +getActivityLogsFromFile(...) : List<AuditLog>
    }
}

package "com.hotel.controller.helper" {
    class KioskLoyaltyHelper {
        +{static} enrollInLoyalty(...)
        +{static} enrollInLoyaltyFromGuestDetails(...)
    }
    
    class KioskRoomSelectionHelper {
        +{static} processAcceptedSuggestion(...) : List<Room>
    }
}

' Relationships
Reservation "1" --> "*" Room : via ReservationRoom
Reservation "1" --> "1" Guest
Reservation "1" --> "1" Billing
Billing "1" --> "*" Payment

ReservationService ..> RoomSuggestion : creates
BillingService ..> Billing : manages
ReportingService ..> AuditLog : reads

@enduml
